fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -338,7 +338,7 @@ main{
 
     #resume, #about, #contact-page, #project-page{
       border-radius:30px;
-      margin: 10px;
+      /* margin: 10px; */
       padding: 20px;
       background-color: var(--md-sys-color-surface-variant);
       color: var(--md-sys-color-tertiary);
@@ -398,7 +398,7 @@ main{
     }
   }
 @media only screen and (max-width: 500px) {
-
+ 
     .gridWrapper div img{
       align-items:center;
       width: auto;
@@ -416,7 +416,7 @@ main{
       grid-template-rows: auto;
       padding:5px;
       grid-gap:30px;
-      margin: 0 auto;
+      /* margin: 0 auto; */
       justify-content:center;
       border-radius:30px;
  
